--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,12 @@ endif ()
 
 find_package(catkin
    REQUIRED COMPONENTS
+   autoware_perception_msgs
    sensor_msgs
    can_msgs
    socketcan_bridge
-   )
-
+   unique_id
+)
 
 catkin_package(
    CATKIN_DEPENDS
@@ -32,25 +33,24 @@ include_directories(
 # Driver Library
 add_library(pe_ars408_parser
    src/ars408_driver.cpp
-   )
+)
 
 # ROS node
 add_executable(pe_ars408_node
    src/ars408_ros_node.cpp
-   )
+)
 
 target_link_libraries(pe_ars408_node
    pe_ars408_parser
    ${catkin_LIBRARIES}
-   )
-
+)
 
 install(TARGETS pe_ars408_node pe_ars408_parser
    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})
-
+   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+)
 
 install(DIRECTORY launch/
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
-   )
+)
