--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ test_build:
   stage: build
   image: ros:foxy
   script:
-    - apt-get update
+    - apt-get update && apt-get install libboost1.71-dev
     - rosdep update
     - mkdir -p src_tmp/$CI_PROJECT_NAME && mv `find -maxdepth 1 -not -name . -not -name src_tmp` src_tmp/$CI_PROJECT_NAME && mv src_tmp src
     - git clone --branch ros2 https://gitlab.com/perceptionengine/autoware/autoware_iv_msgs.git src/autoware_iv_msgs
