--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,6 @@ test_build:
     - rosdep update
     - mkdir -p src_tmp/$CI_PROJECT_NAME && mv `find -maxdepth 1 -not -name . -not -name src_tmp` src_tmp/$CI_PROJECT_NAME && mv src_tmp src
     - git clone --branch ros2 https://gitlab.com/perceptionengine/autoware/autoware_iv_msgs.git src/autoware_iv_msgs
+    - git clone https://github.com/autowarefoundation/ros2_socketcan.git /src/ros2_socketcan
     - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
     - colcon build
