--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,59 +1,44 @@
 cmake_minimum_required(VERSION 3.5)
 project(pe_ars408_ros)
 
-if (NOT "${CMAKE_CXX_STANDARD}")
+if(NOT "${CMAKE_CXX_STANDARD}")
   set(CMAKE_CXX_STANDARD 14)
-endif ()
+endif()
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
-if (NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
+if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
-find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(autoware_perception_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
-find_package(can_msgs REQUIRED)
-find_package(ros2_socketcan REQUIRED)
-find_package(unique_identifier_msgs REQUIRED)
-find_package(Boost REQUIRED)
+find_package(ament_cmake_auto REQUIRED)
+ament_auto_find_build_dependencies()
 
 # Driver Library
-include_directories(include/)
-
-add_library(pe_ars408_parser
-   src/ars408_driver.cpp
-)
-
-target_include_directories(pe_ars408_parser PRIVATE
-   ${Boost_INCLUDE_DIRS}
-)
-
-target_link_libraries(pe_ars408_parser PRIVATE
-        ${Boost_LIBRARIES}
+ament_auto_add_library(pe_ars408_parser SHARED
+  src/ars408_driver.cpp
 )
 
 # ROS node
-add_executable(pe_ars408_node
-   src/ars408_ros_node.cpp
-)
-ament_target_dependencies(pe_ars408_node
-   rclcpp autoware_perception_msgs sensor_msgs can_msgs unique_identifier_msgs
+ament_auto_add_library(pe_ars408_node_component SHARED
+  src/ars408_ros_node.cpp
 )
 
-target_link_libraries(pe_ars408_node
-   pe_ars408_parser
+target_link_libraries(pe_ars408_node_component
+  pe_ars408_parser
 )
 
-install(TARGETS pe_ars408_node pe_ars408_parser
-   DESTINATION lib/${PROJECT_NAME}
+rclcpp_components_register_node(pe_ars408_node_component
+  PLUGIN "PeContinentalArs408Node"
+  EXECUTABLE pe_ars408_node
 )
 
-install(DIRECTORY launch/
-   DESTINATION share/${PROJECT_NAME}
-   FILES_MATCHING PATTERN "*.launch.xml"
-)
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
 
-ament_package()
+ament_auto_package(
+  INSTALL_TO_SHARE
+    launch
+)
